antDesign静态资源 与 普通静态资源相分离

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,10 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Ant Design Pro</title>
   <link rel="icon" href="/favicon.png" type="image/x-icon">
-<link href="/public/index.0211b35e.css" rel="stylesheet"></head>
+<link href="/public/antDesign/index.0211b35e.css" rel="stylesheet"></head>
 
 <body>
   <div id="root"></div>
-<script type="text/javascript" src="/public/index.cca1eb9b.js"></script></body>
+<script type="text/javascript" src="/public/antDesign/index.36889916.js"></script></body>
 
 </html>
