增加侧边栏菜单项

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Ant Design Pro</title>
+  <title>游隼管家</title>
   <link rel="icon" href="/favicon.png" type="image/x-icon">
-<link href="/public/antDesign/index.0211b35e.css" rel="stylesheet"></head>
+<link href="/public/antDesign/index.7a35597a.css" rel="stylesheet"></head>
 
 <body>
   <div id="root"></div>
-<script type="text/javascript" src="/public/antDesign/index.62171827.js"></script></body>
+<script type="text/javascript" src="/public/antDesign/index.d5c653e7.js"></script></body>
 
 </html>
