首页基本布局完毕

--- a/static_antd/src/routes/Fund/Dashboard.less
+++ b/static_antd/src/routes/Fund/Dashboard.less
@@ -25,18 +25,18 @@
       font-size: 14px;
       line-height: 22px;
     }
-    span:first-child {
-      background-color: @background-color-base;
-      border-radius: 20px;
-      display: inline-block;
-      font-size: 12px;
-      font-weight: 600;
-      margin-right: 24px;
-      height: 20px;
-      line-height: 20px;
-      width: 20px;
-      text-align: center;
-    }
+    //span:first-child {
+    //  background-color: @background-color-base;
+    //  border-radius: 20px;
+    //  display: inline-block;
+    //  font-size: 12px;
+    //  font-weight: 600;
+    //  margin-right: 24px;
+    //  height: 20px;
+    //  line-height: 20px;
+    //  width: 20px;
+    //  text-align: center;
+    //}
     span.active {
       //background-color: @primary-color;
       background-color: #314659;
