--- a/app/view/index.html
+++ b/app/view/index.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Squirrel</title>
-  <link rel="icon" href="/favicon.png" type="image/x-icon">
-<link href="/public/antDesign/index.11515d3b.css" rel="stylesheet"></head>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Squirrel</title>
+<link rel="icon" href="/favicon.png" type="image/x-icon">
+</head>
 
 <body>
-  <div id="root"></div>
-<script type="text/javascript" src="/public/antDesign/index.c3d433c7.js"></script></body>
+<link rel="stylesheet" href="https://g.alicdn.com/aisc/aisc/2.8.14/dark.min.css"/>
+<link rel="stylesheet" href="https://g.alicdn.com/aisc/aisc-widgets/2.3.7/dark.css"/>
+<link rel="stylesheet" href="/public/aiscAssets/build/index.bundle.css"/>
+<div id="container"></div>
+<script type="text/javascript" src="https://f.alicdn.com/babel-polyfill/6.16.0/polyfill.min.js"></script>
+<script type="text/javascript" src="https://f.alicdn.com/react/15.4.1/react-with-addons.min.js"></script>
+<script type="text/javascript" src="https://f.alicdn.com/react/15.4.1/react-dom.min.js"></script>
+<script type="text/javascript" src="https://f.alicdn.com/react-redux/4.4.5/react-redux.min.js"></script>
+<script type="text/javascript" src="https://f.alicdn.com/redux/3.6.0/redux.min.js"></script>
+<script type="text/javascript" src="https://f.alicdn.com/redux-thunk/2.2.0/redux-thunk.min.js"></script>
+
+<script type="text/javascript" src="https://g.alicdn.com/aisc/aisc/2.8.14/aisc.min.js"></script>
+<script type="text/javascript" src="https://g.alicdn.com/aisc/aisc-widgets/2.3.7/dark.js"></script>
+<script type="text/javascript" src="/public/aiscAssets/build/vendor.js"></script>
+<script type="text/javascript" src="/public/aiscAssets/build/index.js"></script>
+</body>
 
 </html>
