--- a/app/view/index.html
+++ b/app/view/index.html
@@ -14,6 +14,7 @@
 <link rel="stylesheet" href="https://g.alicdn.com/aisc/aisc-widgets/2.3.7/dark.css"/>
 <link rel="stylesheet" href="/public/aiscAssets/build/index.bundle.css"/>
 <div id="container"></div>
+<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://f.alicdn.com/babel-polyfill/6.16.0/polyfill.min.js"></script>
 <script type="text/javascript" src="https://f.alicdn.com/react/15.4.1/react-with-addons.min.js"></script>
 <script type="text/javascript" src="https://f.alicdn.com/react/15.4.1/react-dom.min.js"></script>
