--- a/static_aisc/src/pages/index/index.scss
+++ b/static_aisc/src/pages/index/index.scss
@@ -15,6 +15,20 @@
   }
 }
 
+.page-wealth-record-list-wrap{
+  margin: 45px auto 0 auto;
+  padding: 20px;
+  .next-icon{
+    visibility: hidden;
+    cursor: pointer;
+  }
+  .row-hover{
+    .next-icon{
+      visibility: visible;
+    }
+  }
+}
+
 .page-wealth-create-wrap{
   margin: 45px auto 0 auto;
   padding: 20px;
