--- a/app/view/index.html
+++ b/app/view/index.html
@@ -12,7 +12,7 @@
 <body>
 <link rel="stylesheet" href="https://g.alicdn.com/aisc/aisc/2.8.14/dark.min.css"/>
 <link rel="stylesheet" href="https://g.alicdn.com/aisc/aisc-widgets/2.3.7/dark.css"/>
-<link rel="stylesheet" href="/public/aiscAssets/build/index.bundle.css"/>
+<link rel="stylesheet" href="/public/aiscAssets/build/index.bundle.css?feVersion={{ feVersion }}"/>
 <div id="container"></div>
 <script>
     window.WM_GLOBAL = {
@@ -32,8 +32,8 @@
 <script type="text/javascript" src="https://f.alicdn.com/redux-thunk/2.2.0/redux-thunk.min.js"></script>
 <script type="text/javascript" src="https://g.alicdn.com/aisc/aisc/2.8.14/aisc.min.js"></script>
 <script type="text/javascript" src="https://g.alicdn.com/aisc/aisc-widgets/2.3.7/dark.js"></script>
-<script type="text/javascript" src="/public/aiscAssets/build/vendor.js"></script>
-<script type="text/javascript" src="/public/aiscAssets/build/index.js"></script>
+<script type="text/javascript" src="/public/aiscAssets/build/vendor.js?feVersion={{ feVersion }}"></script>
+<script type="text/javascript" src="/public/aiscAssets/build/index.js?feVersion={{ feVersion }}"></script>
 <script>
   if ('serviceWorker' in navigator) {
     window.addEventListener('load', () => {
