add dns prefetch

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,6 +7,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Squirrel</title>
 <link rel="icon" href="/favicon.png" type="image/x-icon">
+<link rel="dns-prefetch" href="https://f.alicdn.com">
+<link rel="dns-prefetch" href="https://g.alicdn.com">
+<link rel="dns-prefetch" href="https://cdn.bootcss.com">
 </head>
 
 <body>
