--- a/app/view/index.html
+++ b/app/view/index.html
@@ -9,7 +9,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="dns-prefetch" href="https://f.alicdn.com">
 <link rel="dns-prefetch" href="https://g.alicdn.com">
-<link rel="dns-prefetch" href="https://cdn.bootcss.com">
+<!--<link rel="dns-prefetch" href="https://cdn.bootcss.com">-->
 </head>
 
 <body>
@@ -25,8 +25,8 @@
       },
     };
 </script>
-<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
-<script type="text/javascript" src="https://cdn.bootcss.com/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+<!--<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>-->
+<!--<script type="text/javascript" src="https://cdn.bootcss.com/jquery-cookie/1.4.1/jquery.cookie.js"></script>-->
 <script type="text/javascript" src="https://f.alicdn.com/babel-polyfill/6.16.0/polyfill.min.js"></script>
 <script type="text/javascript" src="https://f.alicdn.com/react/15.4.1/react-with-addons.min.js"></script>
 <script type="text/javascript" src="https://f.alicdn.com/react/15.4.1/react-dom.min.js"></script>
