--- a/app/view/index.html
+++ b/app/view/index.html
@@ -1,1 +1,73 @@
-<!DOCTYPE html><html lang="zh-cmn-Hans"><head><meta charset="UTF-8"/><meta name="theme-color" content="#f7f8f2"><meta http-equiv="X-UA-Compatible"content="IE=edge"/><meta name="viewport"content="width=device-width, initial-scale=1"/><meta name="Description"content="Wealth Manager - 专属于歪歪和周拉斯的资产管理工具"/><meta name="google-site-verification"content="nfOPr4G-D6vPaud2_lZtu7JpzA6FZ71Zy3XV-ekCL8w"/><meta name="baidu-site-verification"content="h1H0l9l1y3"/><title>Wealth Manager</title><link rel="manifest"href="/public/manifest.json"><link rel="icon"href="/favicon.png"type="image/x-icon"/><link rel="dns-prefetch"href="https://f.alicdn.com"/><link rel="dns-prefetch"href="https://g.alicdn.com"/></head><body><link rel="stylesheet"href="https://g.alicdn.com/aisc/aisc/2.8.14/dark.min.css"/><link rel="stylesheet"href="https://g.alicdn.com/aisc/aisc-widgets/2.3.7/dark.css"/><link rel="stylesheet"href="/public/aiscAssets/build/index.bundle.css?feVersion={{ feVersion }}"/><div id="container">加载中...</div><script>window.WM_GLOBAL={user:{uuid:'{{ user.uuid }}',nickname:'{{ user.nickname }}',},};</script><script type="text/javascript"src="https://f.alicdn.com/babel-polyfill/6.16.0/polyfill.min.js"></script><script type="text/javascript"src="https://f.alicdn.com/react/15.4.1/react-with-addons.min.js"></script><script type="text/javascript"src="https://f.alicdn.com/react/15.4.1/react-dom.min.js"></script><script type="text/javascript"src="https://f.alicdn.com/react-redux/4.4.5/react-redux.min.js"></script><script type="text/javascript"src="https://f.alicdn.com/redux/3.6.0/redux.min.js"></script><script type="text/javascript"src="https://f.alicdn.com/redux-thunk/2.2.0/redux-thunk.min.js"></script><script type="text/javascript"src="https://g.alicdn.com/aisc/aisc/2.8.14/aisc.min.js"></script><script type="text/javascript"src="https://g.alicdn.com/aisc/aisc-widgets/2.3.7/dark.js"></script><script type="text/javascript"src="/public/aiscAssets/build/vendor.js?feVersion={{ feVersion }}"></script><script type="text/javascript"src="/public/aiscAssets/build/index.js?feVersion={{ feVersion }}"></script><script>if('serviceWorker'in navigator){window.addEventListener('load',()=>{navigator.serviceWorker.register('/sw.js',{scope:'/'}).then(registration=>{console.log('service worker registration: ',registration)}).catch(registrationError=>{console.warn('service worker registration failed: ',registrationError)})})}</script></body></html>
+<!DOCTYPE html>
+<html lang="zh-cmn-Hans">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="theme-color" content="#f7f8f2">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="Description" content="Wealth Manager - 专属于歪歪和周拉斯的资产管理工具" />
+    <meta name="google-site-verification" content="nfOPr4G-D6vPaud2_lZtu7JpzA6FZ71Zy3XV-ekCL8w"
+    />
+    <meta name="baidu-site-verification" content="h1H0l9l1y3" />
+    <title>
+        Wealth Manager
+    </title>
+    <link rel="manifest" href="/public/manifest.json">
+    <link rel="icon" href="/favicon.png" type="image/x-icon" />
+    <link rel="dns-prefetch" href="https://f.alicdn.com" />
+    <link rel="dns-prefetch" href="https://g.alicdn.com" />
+</head>
+<body>
+<link rel="stylesheet" href="https://g.alicdn.com/aisc/aisc/2.9.0/dark.min.css"
+/>
+<link rel="stylesheet" href="https://g.alicdn.com/aisc/aisc-widgets/2.3.7/dark.css"
+/>
+<link rel="stylesheet" href="/public/aiscAssets/build/index.bundle.css?feVersion={{ feVersion }}"
+/>
+<div id="container">
+    加载中...
+</div>
+<script>
+  window.WM_GLOBAL = {
+    user: {
+      uuid: '{{ user.uuid }}',
+      nickname: '{{ user.nickname }}',
+    },
+  };
+</script>
+<script type="text/javascript" src="https://f.alicdn.com/babel-polyfill/6.16.0/polyfill.min.js">
+</script>
+<script type="text/javascript" src="https://f.alicdn.com/react/15.4.1/react-with-addons.min.js">
+</script>
+<script type="text/javascript" src="https://f.alicdn.com/react/15.4.1/react-dom.min.js">
+</script>
+<script type="text/javascript" src="https://f.alicdn.com/react-redux/4.4.5/react-redux.min.js">
+</script>
+<script type="text/javascript" src="https://f.alicdn.com/redux/3.6.0/redux.min.js">
+</script>
+<script type="text/javascript" src="https://f.alicdn.com/redux-thunk/2.2.0/redux-thunk.min.js">
+</script>
+<script type="text/javascript" src="https://g.alicdn.com/aisc/aisc/2.9.0/aisc.min.js">
+</script>
+<script type="text/javascript" src="https://g.alicdn.com/aisc/aisc-widgets/2.3.7/dark.js">
+</script>
+<script type="text/javascript" src="/public/aiscAssets/build/vendor.js?feVersion={{ feVersion }}">
+</script>
+<script type="text/javascript" src="/public/aiscAssets/build/index.js?feVersion={{ feVersion }}">
+</script>
+<script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('/sw.js', {
+        scope: '/'
+      }).then(registration => {
+        console.log('service worker registration: ', registration)
+      }).catch(registrationError => {
+        console.warn('service worker registration failed: ', registrationError)
+      })
+    })
+  }
+</script>
+</body>
+
+</html>
