--- a/app/view/index.html
+++ b/app/view/index.html
@@ -37,13 +37,13 @@
 </script>
 <script type="text/javascript" src="https://f.alicdn.com/babel-polyfill/6.16.0/polyfill.min.js">
 </script>
-<script type="text/javascript" src="https://f.alicdn.com/react/15.4.1/react-with-addons.min.js">
+<script type="text/javascript" src="https://g.alicdn.com/platform/lib/1.2.1/react/16.8.3/react.production.min.js">
 </script>
-<script type="text/javascript" src="https://f.alicdn.com/react/15.4.1/react-dom.min.js">
+<script type="text/javascript" src="https://g.alicdn.com/platform/lib/1.2.1/react/16.8.3/react-dom.production.min.js">
 </script>
-<script type="text/javascript" src="https://f.alicdn.com/react-redux/4.4.5/react-redux.min.js">
+<script type="text/javascript" src="https://f.alicdn.com/react-redux/5.0.5/react-redux.min.js">
 </script>
-<script type="text/javascript" src="https://f.alicdn.com/redux/3.6.0/redux.min.js">
+<script type="text/javascript" src="https://f.alicdn.com/redux/3.7.2/redux.min.js">
 </script>
 <script type="text/javascript" src="https://f.alicdn.com/redux-thunk/2.2.0/redux-thunk.min.js">
 </script>
