--- a/static_aisc/src/pages/index/index.scss
+++ b/static_aisc/src/pages/index/index.scss
@@ -127,3 +127,14 @@
     }
   }
 }
+
+.page-fund-dashboard{
+  margin: 45px 0 0 0;
+  padding: 20px;
+  .fund-type{
+    margin-right: 5px;
+    border-radius: 4px;
+    border: 1px solid;
+    padding: 0 5px;
+  }
+}
